# wyckoff_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/profiles/: .active  aindex.json  default.json  mywyckoff.json
data/profiles/aindex_memory/: MEMORY.md  _embeddings.npz  周期股深跌破位后的spring诱空陷阱.md  周期股深跌破位后的阴跌中继误判.md  周期股高位阻力区派发误判蓄力.md
data/profiles/mywyckoff_memory/: MEMORY.md  _embeddings.npz  价格中低位出现疑似派发形态再积累误判风险.md  吸筹b阶段末期cobsot_down组合被误判为震荡.md  多空概率差极小时的虚高置信度陷阱.md  强趋势中ob_up连续出现5次仍看空.md  极小概率差下左侧反转共振的变盘预判.md
finagent/: __main__.py  config.py  service.py  wyckoff_bridge.py
finagent/agents/: __init__.py  base.py  critic.py  evolver.py  predictor.py  reflector.py
finagent/data/: fetcher.py
finagent/engine/: evolution.py  prediction.py  rolling_window.py
finagent/prompts/: templates.py
finagent/stats/: seqstats.py
finagent/storage/: database.py  embedder.py  memory_store.py  profile_store.py
finagent/utils/: chart.py  stock_info.py
scripts/: ingest_seqstats.py
stockinfo/: tags.csv
wyckoff_analyzer/: __init__.py  __main__.py  data_fetcher.py  main.py  phase_detector.py  pnf_analysis.py  probability_scorer.py  visualizer.py  wave_classifier.py  wyckoff_events.py
wyckoffstats/: event_mapping.csv  seqstats_中盘.csv  seqstats_价值.csv  seqstats_制造.csv  seqstats_周期.csv  seqstats_基础设施.csv  seqstats_大盘.csv  seqstats_小盘.csv  seqstats_成长.csv  seqstats_消费.csv  seqstats_科技.csv  seqstats_红利.csv  seqstats_金融.csv
