[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finagent"
version = "0.1.0"
description = "Self-evolving Wyckoff technical-analysis agent for A-shares and indices"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [{ name = "Araya" }]
dependencies = [
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Market data backends
akshare = ["akshare>=1.12"]
yfinance = ["yfinance>=0.2.40"]
wind = ["oracledb>=2.0"]
# OpenAI-compatible LLM provider + embeddings
openai = ["openai>=1.40"]
# Charts (FINAGENT_ENABLE_CHART=1)
chart = ["matplotlib>=3.7"]
# Everything except the licensed Wind backend
all = ["akshare>=1.12", "yfinance>=0.2.40", "openai>=1.40", "matplotlib>=3.7"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
finagent = "finagent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["finagent", "wyckoff_analyzer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
