[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finagent"
version = "0.1.0"
description = "Self-evolving Wyckoff technical-analysis agent for A-shares and indices"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [{ name = "Araya" }]
dependencies = [
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# OpenAI-compatible LLM provider + embeddings
openai = ["openai>=1.40"]
# Charts (FINAGENT_ENABLE_CHART=1)
chart = ["matplotlib>=3.7"]
all = ["openai>=1.40", "matplotlib>=3.7"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
finagent = "finagent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["finagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
